File Too long Fixed

--- a/frontend-q/src/css/app.scss
+++ b/frontend-q/src/css/app.scss
@@ -116,7 +116,7 @@ tr:nth-child(even) {
     display: none !important;
   }
   .q-chip {
-    width: 100% !important;
+    width: calc(100% - 15px) !important;
     height: 30px !important;
     margin: 4px 8px !important;
   }
